--- a/book/basics/concrete/reinforcement.ipynb
+++ b/book/basics/concrete/reinforcement.ipynb
@@ -65,6 +65,7 @@
     "---\n",
     "align: right\n",
     "---\n",
+    "Lab splice length in reinforced concrete.\n",
     "```\n",
     "\n",
     "In some cases the reinforcement bars need to be coupled because of the limited lengths of the bars or to ease execution. This is done by placing two bars relatively close to each other for a certain lap length. The forces are transmitted by shear and compressive stresses in the concrete. For a first design the lap length can be estimated as: \n",
@@ -86,6 +87,7 @@
     "---\n",
     "align: right\n",
     "---\n",
+    "Reinforced concrete cover.\n",
     "```\n",
     "`````{Note}\n",
     "Further demands:  \n",
@@ -102,6 +104,7 @@
     "---\n",
     "align: right\n",
     "---\n",
+    "Minimal bar distances in reinforced concrete.\n",
     "```\n",
     "\n",
     "The spacing between (not c.t.c distance) the bars should be not less than the maximum of:\n",
