--- a/book/basics/steel/castellated_beams.ipynb
+++ b/book/basics/steel/castellated_beams.ipynb
@@ -12,12 +12,10 @@
     "---\n",
     "align: right\n",
     "---\n",
+    "Castellated beams detail.\n",
     "```\n",
     "Castellated beams are made by cutting standard hot rolled sections lengthwise along a ‘toothed’ line. After cutting, both parts are shifted with respect to each other, placing the ‘teeth’ upon each other. The two halves are welded together. Between the welded connections the characteristic hexagonal holes appear. The increased height is very beneficial for the stiffness of the beam. The bending strength is not increased very much. The shear capacity of the castellated beam is relatively low. If necessary, the hexagonal hole nearest to the supports can be filled up with a plate to locally increase the shear capacity. For these reasons castellated beams are very suitable for long spans with relatively low loads. To prevent local buckling of the web (if necessary, and \n",
     "where needed) local stiffeners can be added.\n",
-    "\n",
-    "### Sources\n",
-    "- [Grunbauer](https://www.grunbauer.nl/): The information on integrated beams has been put together in cooperation with Grunbauer B.V. and Bouwen met Staal.\n",
     "\n",
     "## Possible shapes\n",
     "\n",
