--- a/book/basics/steel/integrated_beams.ipynb
+++ b/book/basics/steel/integrated_beams.ipynb
@@ -12,6 +12,7 @@
     "---\n",
     "align: right\n",
     "---\n",
+    "Two types of top hat beams (SFB on the left and IFB on the right.)\n",
     "```\n",
     "Integrated beams, in combination with hollow core slabs, precast concrete planks or composite floors, form a solid floor construction. The beams are completely integrated in the floor, thereby reducing structural height. The welded beams allow for a fast and easy erection. A wide range of different types is available. Examples are the top hat beams (THQ-beams), SFB- beams and IFB-beams.\n",
     "\n",
