--- a/book/basics/steel/material_characteristics.ipynb
+++ b/book/basics/steel/material_characteristics.ipynb
@@ -29,7 +29,7 @@
     "---\n",
     "align: right\n",
     "---\n",
-    "Stress-strain diagram steel\n",
+    "Stress-strain diagram steel.\n",
     "```\n",
     "```{Note}\n",
     "$ε_{y;d}$ : design yield strain  \n",
