--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# Global dimensioning beam\n",
     "\n",
+    "```{note}\n",
+    "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
+    "```\n",
+    "\n",
     "The transverse dimensions of beams depend on the forces acting on them, but also on the length of those elements. To provide an initial estimate of the dimensions, estimation rules or key figures have been established. These estimation rules are no different from a first global approximation. They are mainly intended for usual structures with normal loads. The more extreme the structure or the load placed on it, the more inaccurate the estimation rule. \n",
     "\n",
     "For the office, we want to dimension and check a first-floor floor beam: Girder B3-D3 on the schematic load-bearing construction floor plan in the figure below.\n",
