--- a/book/calculation_examples/concrete/cantilever_beam.ipynb
+++ b/book/calculation_examples/concrete/cantilever_beam.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# Global dimensioning cantilever beam\n",
     "\n",
+    "```{note}\n",
+    "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
+    "```\n",
+    "\n",
     "A cantilevered beam has at least one end unsupported. The relevant support point is moved slightly towards the center of the beam. Cantilevered beams are used, for example, in building overhangs, galleries, balconies, and canopies.\n",
     "\n",
     "Cantilevered beams can be dimensioned using an estimation rule and then tested against the standard. For the section between the support points, the same rules apply as for a normal beam on two supports. For steel, the estimation rule is: $h_{beam} = \\frac{1}{20} \\cdot l_{ov}$, where $l_{ov}$ is the length of the beam section between the support points.\n",
