--- a/book/calculation_examples/concrete/column.ipynb
+++ b/book/calculation_examples/concrete/column.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# Global dimensioning column\n",
     "\n",
+    "```{note}\n",
+    "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
+    "```\n",
+    "\n",
     "Estimation rules also exist for columns, but especially for these elements, the actual dimensions required can be very different from those found with these estimation rules. The dimensions of the column depend strongly on the buckling length. However, there is a big difference whether a column has to support an entire building with many floors or just the roof. Often, the column at ground level is the ‘dimensional’ column. A slender column with large buckling length could also be normative, even if it is not on the ground floor.\n",
     "\n",
     "```{figure} Images/Static_Scheme_Column.jpg\n",
