--- a/book/calculation_examples/concrete/truss_beam.ipynb
+++ b/book/calculation_examples/concrete/truss_beam.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# Global dimensioning truss beam\n",
     "\n",
+    "```{note}\n",
+    "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
+    "```\n",
+    "\n",
     "For larger spans, a simple beam will no longer suffice. A suitable element for consideration is a truss beam. In construction, the term \"truss\" is also used for timber frames with masonry infill, commonly seen in buildings in Germany. In this chapter, we refer to a truss as a structural element composed of triangles. Unlike a quadrilateral, a triangle is rigid. The simplest truss is a triangular truss, consisting of a single triangle.\n",
     "\n",
     "A truss beam is composed of multiple triangles side by side, forming a rigid whole. Truss beams distinguish between chord members (blue) and web members (red). Chord members include the top and bottom chords and usually vertical end posts. The web members consist of diagonals and often vertical posts. Two patterns are distinguished: N-trusses and V-trusses. In N-trusses, we further distinguish between trusses with descending and ascending diagonals. V-trusses may also include vertical posts.\n",
