--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -8,6 +8,10 @@
     "\n",
     "Deze pagina geeft een beeld van deel 1 van de opdracht van het vak Beton- en Staalconstructies (CTB2220-14) zoals deze is gepubliceerd aan studenten in het jaar 2023-2024 in het tweede kwartaal. Het doel is om als extra voorbeeld te dienen, waardoor de student meer inzicht krijgt in het gedeelte van het vak dat over veiligheid gaat. In de opdracht zijn verschillende parameters afhankelijk gemaakt van de laatste 3 cijfers van het studentennummer. In de betreffende parameters zijn deze aangeduid met **X, Y en Z (1234XYZ)**. Omdat deze opdracht als voorbeeld dient, is in deze uitwerking gekozen voor de parametrisatie **X = 0, Y = 0 en Z = 0**.\n",
     "\n",
+    "```{note}\n",
+    "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
+    "```\n",
+    "\n",
     "```{Note}\n",
     "To provide more coherence in the Quick Reference, the flowchart for structural design developed by Lisette Klompenhouwer, Bsc (2015) is provided in the margin to allow for oversight in where we are in the design process. The full flowchart can be found here: {doc}`../../design_workflow/general_design_info`.\n",
     "```\n",
