--- a/book/calculation_examples/steel/beam.ipynb
+++ b/book/calculation_examples/steel/beam.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Global dimensioning beam"
+    "# Global dimensioning beam\n"
    ]
   },
   {
