--- a/book/design/concrete/composite_floors.ipynb
+++ b/book/design/concrete/composite_floors.ipynb
@@ -88,7 +88,9 @@
     "| Characteristic yield stress | Minimal 320 $[N/mm^2]$                                           |\n",
     "| Ultimate strain             | Minimal 17%                                                   |\n",
     "\n",
+    "```{note}\n",
     "Based on: C28/35. Other strength classes can be applied except for lightweight concrete.\n",
+    "```\n",
     "\n",
     "## Spans\n",
     "\n",
