--- a/book/design/concrete/hollow_core_slabs.ipynb
+++ b/book/design/concrete/hollow_core_slabs.ipynb
@@ -44,10 +44,9 @@
     "Product information Dycore\n",
     "```\n",
     "\n",
-    "## Aplications\n",
+    "## Applications\n",
     "\n",
-    "In contrast to what one may expect hollow core slabs also offer opportunities for free formed floor plans. The use of hollow core slabs is not restricted to the rectangular floor\n",
-    "plans used in offices and flats. Both round shaps as chamfered egdes are possible. It is important to realize that the plates can be cut under an angle.\n",
+    "In contrast to what one may expect hollow core slabs also offer opportunities for free formed floor plans. The use of hollow core slabs is not restricted to the rectangular floor plans used in offices and flats. Both round shaps as chamfered egdes are possible. It is important to realise that the plates can be cut under an angle.\n",
     "\n",
     "```{figure} Images/HollowCoreApplication1.jpg\n",
     "```    \n",
@@ -86,11 +85,17 @@
     "- Application of a structural topping with a tensile tie coupled to the structure.\n",
     "- A combination of the aformentioned provisions with a cast-in peripheral beam which contains the tensile tie.\n",
     "  \n",
-    "The horizontal loads from the floor are transmitted by concrete ‘studs’ to the stabilizing elements of the building.\n",
+    "The horizontal loads from the floor are transmitted by concrete ‘studs’ to the stabilising elements of the building.\n",
     "\n",
     "```{figure} Images/ExecutionAspects1.jpg\n",
+    "---\n",
+    "---\n",
+    "Load transmission to stabilising elements.\n",
     "```   \n",
     "```{figure} Images/ExecutionAspects2.jpg\n",
+    "---\n",
+    "---\n",
+    "Load transmission to stabilising elements.\n",
     "``` \n",
     "\n",
     "## Product specifications VBI isolation slabfloor A200\n",
@@ -114,13 +119,22 @@
     "| Use of recycled concrete granule | 20% on request             |\n",
     "\n",
     "```{figure} Images/VBI1.jpg\n",
+    "---\n",
+    "---\n",
+    "VBI A200 slab floor cross-section.\n",
     "```   \n",
     "```{figure} Images/VBI2.jpg\n",
+    "---\n",
+    "---\n",
+    "Dimensions of VBI A200 slab floor.\n",
     "```   \n",
     "\n",
     "### Spans\n",
     " \n",
     "```{figure} Images/HollowCoreSpans.jpg\n",
+    "---\n",
+    "---\n",
+    "Load resistance vs. spans of a Hollow Core slab (VBI 200).\n",
     "```\n",
     "\n",
     "### Connections (All types of hollow core slabs)\n",
@@ -144,6 +158,9 @@
     "- for bearings on a steel substructure where the load needs to be centered.\n",
     "\n",
     "```{figure} Images/HollowCoreConnections.jpg\n",
+    "---\n",
+    "---\n",
+    "Minimum conditions for the bearing length of a Hollow Core slab.\n",
     "```\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
@@ -167,31 +184,43 @@
     "| Use of recycled concrete granule | 20% on request               |\n",
     "\n",
     "```{figure} Images/VBI3.jpg\n",
+    "---\n",
+    "---\n",
+    "VBI A320 slab floor cross-section.\n",
     "```  \n",
     "```{figure} Images/VBI4.jpg\n",
+    "---\n",
+    "---\n",
+    "Dimensions of VBI A320 slab floor.\n",
     "```\n",
     "\n",
     "### Spans\n",
     "\n",
     "```{figure} Images/HollowCoreSpans2.jpg\n",
+    "---\n",
+    "---\n",
+    "Load resistance vs. spans of a Hollow Core Slab (VBI 320).\n",
     "```\n",
     "\n",
     "### Connections (All types of hollow core slabs)\n",
     "\n",
     "```{figure} Images/HollowCoreConnections2.jpg\n",
-    "\n",
+    "---\n",
+    "---\n",
     "Support on cavity wall\n",
     "```\n",
     "\n",
     "```{figure} Images/HollowCoreConnections3.jpg\n",
-    "\n",
+    "---\n",
+    "---\n",
     "For walls separating two houses the hollow cores near voids are filled with mortar, mineral wool of polymer foam.\n",
     "```\n",
     "\n",
     "\n",
     "\n",
     "```{figure} Images/HollowCoreConnections4.jpg\n",
-    "\n",
+    "---\n",
+    "---\n",
     "Bearing on console\n",
     "```\n",
     "\n",
@@ -214,11 +243,17 @@
     "| K    | 400         | 5.0             | 10.9         | 0.23                 | 4625             | 18               | 14.4             |\n",
     "\n",
     "```{figure} Images/ProductSpecificationsDycore.jpg\n",
+    "---\n",
+    "---\n",
+    "Different cross-sections of Dycore Hollow Core Slabs.\n",
     "```\n",
     "\n",
     "### Spans\n",
     "\n",
     "```{figure} Images/Dycorespans.jpg\n",
+    "---\n",
+    "---\n",
+    "Load resistance vs. span Hollow Core Slab (Dycore).\n",
     "```\n",
     "\n",
     "```{note}\n",
@@ -228,6 +263,9 @@
     "### Connections (All types of hollow core slabs)\n",
     "\n",
     "```{figure} Images/Integrated_Beams.jpg\n",
+    "---\n",
+    "---\n",
+    "Connections between Hollow Core slabs.\n",
     "```"
    ]
   }
