--- a/book/design/concrete/moment_normalforce_interaction.ipynb
+++ b/book/design/concrete/moment_normalforce_interaction.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(content:design:concrete:moment_normalforce_interaction)=\n",
     "# Moment normal force interaction\n",
     "\n",
     "In this section calculations in which a normal force and moment are interacting with each other will be shown. The different points on the graph are calculated to give insight in the resistance of the columns. Initially, a setup with a bilinear $\\sigma$-$\\varepsilon$ will be shown, which is relevant for the course Concrete & Steel Structures, which will include calculations. Then the interaction lines are plotted on the GTB tables, to show how they match. Secondly, a parabolic $\\sigma$-$\\varepsilon$ will be shown and a corresponding normal force-moment interaction diagram from the GTB-tables will be given. Calculations will not be made on these interaction diagrams, as it is just for illustration purposes.\n",
