--- a/book/design/concrete/precast_concrete_planks.ipynb
+++ b/book/design/concrete/precast_concrete_planks.ipynb
@@ -30,8 +30,14 @@
     "```\n",
     "\n",
     "```{figure} Images/PrecastConcrete_Planks.jpg\n",
+    "---\n",
+    "---\n",
+    "Precast concrete planks.\n",
     "```  \n",
     "```{figure} Images/PrecastConcrete_Planks2.jpg\n",
+    "---\n",
+    "---\n",
+    "Thickness of precast concrete planks.\n",
     "```  \n",
     "\n",
     "## Product specifications Dycore precast concrete planks\n",
@@ -49,11 +55,21 @@
     "|                       | - 80 mm / 1.92 kN/m²                                     |\n",
     "\n",
     "```{figure} Images/Dycore_Precast.jpg\n",
+    "Precast slabs dimensions (Dycore).\n",
     "``` \n",
     "\n",
-    "## Connections\n",
+    "## Connections\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "```{figure} Images/Dycore_Precast2.jpg\n",
+    "---\n",
+    "---\n",
+    "Connections between precast concrete slabs.\n",
     "``` "
    ]
   }
