--- a/book/design/concrete/spans_in_concrete.ipynb
+++ b/book/design/concrete/spans_in_concrete.ipynb
@@ -12,6 +12,9 @@
    "metadata": {},
    "source": [
     "```{figure} Images/Spans_Concrete.jpg\n",
+    "---\n",
+    "---\n",
+    "Spans in concrete.\n",
     "```    "
    ]
   }
