--- a/book/design/steel/buckling.ipynb
+++ b/book/design/steel/buckling.ipynb
@@ -12,6 +12,9 @@
    "metadata": {},
    "source": [
     "```{figure} Images/Buckling_Lengths1.jpg\n",
+    "---\n",
+    "---\n",
+    "Buckling matrix of steel columns.\n",
     "``` "
    ]
   }
