--- a/book/design/steel/spans_in_steel.ipynb
+++ b/book/design/steel/spans_in_steel.ipynb
@@ -12,6 +12,9 @@
    "metadata": {},
    "source": [
     "```{figure} Images/Spans_Steel.jpg\n",
+    "---\n",
+    "---\n",
+    "Spans in steel.\n",
     "```"
    ]
   }
