--- a/book/design/steel/steel_structures.ipynb
+++ b/book/design/steel/steel_structures.ipynb
@@ -13,8 +13,7 @@
    "source": [
     "## Steel columns\n",
     "```{figure} Images/Steel_Columns1.jpg\n",
-    "--- \n",
-    "align: right\n",
+    "---\n",
     "---\n",
     "Rolled and welded H- and U-sections\n",
     "```  \n",
@@ -28,7 +27,6 @@
     "\n",
     "```{figure} Images/Steel_Columns2.jpg\n",
     "--- \n",
-    "align: right\n",
     "---\n",
     "Hollow sections\n",
     "```  \n",
@@ -42,7 +40,6 @@
     "\n",
     "```{figure} Images/Steel_Columns3.jpg\n",
     "--- \n",
-    "align: right\n",
     "---\n",
     "Casted-in and concrete-filled columns always contain extra reinforcement\n",
     "```  \n",
@@ -52,7 +49,6 @@
     "## Main floorbeams\n",
     "```{figure} Images/Main_Floorbeams1.jpg\n",
     "--- \n",
-    "align: right\n",
     "---\n",
     "Wide flange (H) sections and hollow sections.\n",
     "```  \n",
@@ -62,7 +58,6 @@
     "\n",
     "```{figure} Images/Main_Floorbeams2.jpg\n",
     "--- \n",
-    "align: right\n",
     "---\n",
     "I- and U-sections as main beams.\n",
     "```  \n",
@@ -72,7 +67,6 @@
     "\n",
     "```{figure} Images/Main_Floorbeams3.jpg\n",
     "--- \n",
-    "align: right\n",
     "---\n",
     "Truss beam.\n",
     "```  \n",
@@ -82,7 +76,6 @@
     "\n",
     "```{figure} Images/Main_Floorbeams4.jpg\n",
     "--- \n",
-    "align: right\n",
     "---\n",
     "Top hat beams with added compression layer, with or without shear connections.\n",
     "```  \n",
@@ -93,7 +86,6 @@
     "## Floors\n",
     "```{figure} Images/Composite_Floors.jpg\n",
     "--- \n",
-    "align: right\n",
     "---\n",
     "Composite floor with extra reinforcement.\n",
     "```  \n",
@@ -104,7 +96,6 @@
     "## Main roofbeams\n",
     "```{figure} Images/Roofbeams1.jpg\n",
     "--- \n",
-    "align: right\n",
     "---\n",
     "Wide flange (H) sections and hollow sections.\n",
     "```  \n",
@@ -114,7 +105,6 @@
     "\n",
     "```{figure} Images/Roofbeams2.jpg\n",
     "--- \n",
-    "align: right\n",
     "---\n",
     "Truss made of cold formed sections.\n",
     "```\n",
@@ -123,7 +113,6 @@
     "\n",
     "```{figure} Images/Roofbeams3.jpg\n",
     "--- \n",
-    "align: right\n",
     "---\n",
     "Truss made of formed sections.\n",
     "```  \n",
@@ -133,7 +122,6 @@
     "\n",
     "```{figure} Images/Roofbeams4.jpg\n",
     "--- \n",
-    "align: right\n",
     "---\n",
     "Truss made of hot rolled sections\n",
     "``` \n",
@@ -143,7 +131,6 @@
     "\n",
     "```{figure} Images/Roofbeams5.jpg\n",
     "--- \n",
-    "align: right\n",
     "---\n",
     "Space frame made of hot rolled sections.\n",
     "```  \n",
@@ -152,12 +139,18 @@
     "\n",
     "## Purlins roofstructures\n",
     "```{figure} Images/Purlins1.jpg\n",
+    "---\n",
+    "---\n",
+    "Steel purlin roofstructure.\n",
     "```  \n",
     "$l = 3 - 12 m$  \n",
     "$h = 120 - 300 mm$  \n",
     "$h = l/25 - l/35$  \n",
     "\n",
     "```{figure} Images/Purlins2.jpg\n",
+    "---\n",
+    "---\n",
+    "Steel purlins roofstructure.\n",
     "```  \n",
     "$l = 6 - 40 m$  \n",
     "$h = 200 - 1000 mm$  \n",
@@ -166,12 +159,18 @@
     "\n",
     "## Roofing plates\n",
     "```{figure} Images/Roofing_Plate1.jpg\n",
+    "---\n",
+    "---\n",
+    "Steel structure roofing plate.\n",
     "```  \n",
     "$l = 5 - 28 m$  \n",
     "$h = 300 - 1000$  \n",
     "$h = l/15 - l/25$  \n",
     "\n",
     "```{figure} Images/Roofing_Plate2.jpg\n",
+    "---\n",
+    "---\n",
+    "Steel structure roofing plate.\n",
     "```  \n",
     "$l = 2 - 3 m$  \n",
     "$h = 75 mm$  \n",
