--- a/book/design/timber/timber_structures_and_details.ipynb
+++ b/book/design/timber/timber_structures_and_details.ipynb
@@ -10,7 +10,7 @@
     "```{figure} Images/straight_beam_precamber.png\n",
     "---\n",
     "---\n",
-    "Straight beam (possibly with precamber)\n",
+    "Straight beam (possibly with precamber).\n",
     "```\n",
     "\n",
     "```{admonition} Rules of thumb\n",
@@ -26,20 +26,20 @@
     "```{figure} Images/straight_beam_precamber_shapes.png\n",
     "---\n",
     "---\n",
-    "Possible shapes\n",
+    "Possible shapes.\n",
     "```\n",
     "\n",
     "```{figure} Images/straight_beam_precamber_details.png\n",
     "---\n",
     "---\n",
-    "Details (left: support on continuous column; middle: support on concrete wall; right: support on double timber column (by means of support block))\n",
+    "Details (left: support on continuous column; middle: support on concrete wall; right: support on double timber column (by means of support block)).\n",
     "```\n",
     "\n",
     "## Straight beam (possibly with cantilever)\n",
     "```{figure} Images/straight_beam_cantilever.png\n",
     "---\n",
     "---\n",
-    "Straight beam (possibly with cantilever)\n",
+    "Straight beam (possibly with cantilever).\n",
     "```\n",
     "\n",
     "```{admonition} Rules of thumb\n",
@@ -54,20 +54,20 @@
     "```{figure} Images/straight_beam_cantilever_shapes.png\n",
     "---\n",
     "---\n",
-    "Possible shapes\n",
+    "Possible shapes.\n",
     "```\n",
     "\n",
     "```{figure} Images/straight_beam_cantilever_details.png\n",
     "---\n",
     "---\n",
-    "Details (left: support of purlins on main beam by means of Z-profile; middle: double beam on a double timber column (bolted); right: beam on timber column, with steel connector plate (bolted))\n",
+    "Details (left: support of purlins on main beam by means of Z-profile; middle: double beam on a double timber column (bolted); right: beam on timber column, with steel connector plate (bolted)).\n",
     "```\n",
     "\n",
     "## Saddle roof with inclined upper edge\n",
     "```{figure} Images/saddle_roof_inclined.png\n",
     "---\n",
     "---\n",
-    "Saddle roof with inclined upper edge\n",
+    "Saddle roof with inclined upper edge.\n",
     "```\n",
     "\n",
     "```{admonition} Rules of thumb\n",
@@ -80,20 +80,20 @@
     "```{figure} Images/saddle_roof_inclined_shapes.png\n",
     "---\n",
     "---\n",
-    "Possible shapes\n",
+    "Possible shapes.\n",
     "```\n",
     "\n",
     "```{figure} Images/saddle_roof_inclined_details.png\n",
     "---\n",
     "---\n",
-    "Details (left: beam on wall, welded steel connection; middle: connection between beam and double column (bolted); right: beam-beam connection with steel connector plate (Dutch: gerberligger))\n",
+    "Details (left: beam on wall, welded steel connection; middle: connection between beam and double column (bolted); right: beam-beam connection with steel connector plate (Dutch: gerberligger)).\n",
     "```\n",
     "\n",
     "## Saddle roof with inclined or curved upper and lower edge\n",
     "```{figure} Images/saddle_roof_curved.png\n",
     "---\n",
     "---\n",
-    "Saddle roof with inclined or curved upper and lower edge\n",
+    "Saddle roof with inclined or curved upper and lower edge.\n",
     "```\n",
     "\n",
     "```{admonition} Rules of thumb\n",
@@ -107,13 +107,13 @@
     "```{figure} Images/saddle_roof_curved_shapes.png\n",
     "---\n",
     "---\n",
-    "Possible shapes\n",
+    "Possible shapes.\n",
     "```\n",
     "\n",
     "```{figure} Images/saddle_roof_curved_details.png\n",
     "---\n",
     "---\n",
-    "Details (left: beam-column connection (nailed plates); middle: support on wall, full hinge with slotted hole (screwed steel plate); right: purlin-beam connection with steel connector, load acts on top of main beam)\n",
+    "Details (left: beam-column connection (nailed plates); middle: support on wall, full hinge with slotted hole (screwed steel plate); right: purlin-beam connection with steel connector, load acts on top of main beam).\n",
     "```\n",
     "\n",
     "The upper edges need lateral support.\n",
@@ -126,7 +126,7 @@
     "```{figure} Images/continuous_beam.png\n",
     "---\n",
     "---\n",
-    "Continuous beam\n",
+    "Continuous beam.\n",
     "```\n",
     "\n",
     "```{admonition} Rules of thumb\n",
@@ -143,13 +143,13 @@
     "```{figure} Images/continuous_beam_shapes.png\n",
     "---\n",
     "---\n",
-    "Possible shapes\n",
+    "Possible shapes.\n",
     "```\n",
     "\n",
     "```{figure} Images/continuous_beam_details.png\n",
     "---\n",
     "---\n",
-    "Details (left: beam-beam connection with steel connector plate; middle: heavy support (welded); right: truss connection (with column) wih coupler plate and dowels)\n",
+    "Details (left: beam-beam connection with steel connector plate; middle: heavy support (welded); right: truss connection (with column) wih coupler plate and dowels).\n",
     "```\n",
     "\n",
     "The upper edges need lateral support.\n",
@@ -159,7 +159,7 @@
     "```{figure} Images/straight_truss.png\n",
     "---\n",
     "---\n",
-    "Straight truss\n",
+    "Straight truss.\n",
     "```\n",
     "\n",
     "```{admonition} Rules of thumb\n",
@@ -175,13 +175,13 @@
     "```{figure} Images/straight_truss_shapes.png\n",
     "---\n",
     "---\n",
-    "Possible shapes\n",
+    "Possible shapes.\n",
     "```\n",
     "\n",
     "```{figure} Images/straight_truss_details.png\n",
     "---\n",
     "---\n",
-    "Details (left: connection of tensile bars (steel strips) to bottom chord and compressive strut (coupler plate); middle: connection between bottom chord and diagonals with screwed steel plates and central axle; right: connection between bottom chord and diagonals with screwed steel plates and central axle)\n",
+    "Details (left: connection of tensile bars (steel strips) to bottom chord and compressive strut (coupler plate); middle: connection between bottom chord and diagonals with screwed steel plates and central axle; right: connection between bottom chord and diagonals with screwed steel plates and central axle).\n",
     "```\n",
     "\n",
     "The upper chords (under compression) must be supported laterally in all trusses. For truss type 1 the bottom chord also needs lateral support to prevent the tensile chord from twisting out of plane.\n",
@@ -191,7 +191,7 @@
     "```{figure} Images/triangular_truss.png\n",
     "---\n",
     "---\n",
-    "Triangular or trapezoidal truss\n",
+    "Triangular or trapezoidal truss.\n",
     "```\n",
     "\n",
     "```{admonition} Rules of thumb\n",
@@ -207,13 +207,13 @@
     "```{figure} Images/triangular_truss_shapes.png\n",
     "---\n",
     "---\n",
-    "Possible shapes\n",
+    "Possible shapes.\n",
     "```\n",
     "\n",
     "```{figure} Images/triangular_truss_details.png\n",
     "---\n",
     "---\n",
-    "Details (left: connection of upper chord, diagonals and vertical with coupler plate; middle: connection of bottom chord, diagonals and vertical with toothed plate; right: connection of upper chord and vertical with carpentry joint)\n",
+    "Details (left: connection of upper chord, diagonals and vertical with coupler plate; middle: connection of bottom chord, diagonals and vertical with toothed plate; right: connection of upper chord and vertical with carpentry joint).\n",
     "```\n",
     "\n",
     "The upper chords need lateral support.\n",
@@ -223,7 +223,7 @@
     "```{figure} Images/under_stressed_beam.png\n",
     "---\n",
     "---\n",
-    "Under stressed beam\n",
+    "Under stressed beam.\n",
     "```\n",
     "\n",
     "```{admonition} Rules of thumb\n",
@@ -235,13 +235,13 @@
     "```{figure} Images/under_stressed_beam_shapes.png\n",
     "---\n",
     "---\n",
-    "Possible shapes\n",
+    "Possible shapes.\n",
     "```\n",
     "\n",
     "```{figure} Images/under_stressed_beam_details.png\n",
     "---\n",
     "---\n",
-    "Details (left: connection of the tensile bar at the support; middle: connection of the tensile bars and compressive strut with welded plates; right: connection of the tensile bars and diagonals with dowels)\n",
+    "Details (left: connection of the tensile bar at the support; middle: connection of the tensile bars and compressive strut with welded plates; right: connection of the tensile bars and diagonals with dowels).\n",
     "```\n",
     "\n",
     "The upper edges need lateral support. The tensile bars also need lateral support to prevent twisting out of plane.\n",
@@ -251,7 +251,7 @@
     "```{figure} Images/rigid_frame.png\n",
     "---\n",
     "---\n",
-    "Rigid frame\n",
+    "Rigid frame.\n",
     "```\n",
     "\n",
     "```{admonition} Rules of thumb\n",
@@ -264,13 +264,13 @@
     "```{figure} Images/rigid_frame_shapes.png\n",
     "---\n",
     "---\n",
-    "Possible shapes\n",
+    "Possible shapes.\n",
     "```\n",
     "\n",
     "```{figure} Images/rigid_frame_details.png\n",
     "---\n",
     "---\n",
-    "Details (left: column-floor support with angle profiles and welded endplate (bolted); middle: moment resisting joint between double column and beam (dowels); right: column-floor support with cast-in plates (bolted))\n",
+    "Details (left: column-floor support with angle profiles and welded endplate (bolted); middle: moment resisting joint between double column and beam (dowels); right: column-floor support with cast-in plates (bolted)).\n",
     "```\n",
     "\n",
     "This floor support connection is only suitable for low horizontal forces.\n",
@@ -280,7 +280,7 @@
     "```{figure} Images/three_hinged_frame.png\n",
     "---\n",
     "---\n",
-    "Three hinged frame (straight legs)\n",
+    "Three hinged frame (straight legs).\n",
     "```\n",
     "\n",
     "```{admonition} Rules of thumb\n",
@@ -300,7 +300,7 @@
     "```{figure} Images/three_hinged_frame_shapes.png\n",
     "---\n",
     "---\n",
-    "Possible shapes\n",
+    "Possible shapes.\n",
     "```\n",
     "```{Note}\n",
     "$l = 15 - 50 m$  \n",
@@ -311,7 +311,7 @@
     "```{figure} Images/three_hinged_frame_details.png\n",
     "---\n",
     "---\n",
-    "Details (left: simple support, concrete footing with elastomeric bearing; middle: connection of double tensile bar to double column; right: column support on concrete footing with cast in plates (screwed))\n",
+    "Details (left: simple support, concrete footing with elastomeric bearing; middle: connection of double tensile bar to double column; right: column support on concrete footing with cast in plates (screwed)).\n",
     "```\n",
     "\n",
     "This floor support connection is only suitable for low horizontal forces.\n",
@@ -321,7 +321,7 @@
     "```{figure} Images/three_hinged_kinked.png\n",
     "---\n",
     "---\n",
-    "Three hinged frame (curved/kinked legs)\n",
+    "Three hinged frame (curved/kinked legs).\n",
     "```\n",
     "\n",
     "```{admonition} Rules of thumb\n",
@@ -342,14 +342,14 @@
     "```{figure} Images/three_hinged_kinked_shapes.png\n",
     "---\n",
     "---\n",
-    "Possible shapes\n",
+    "Possible shapes.\n",
     "```\n",
     "\n",
     "```{figure} Images/three_hinged_kinked_details.png\n",
     "---\n",
     "---\n",
     "Details (left: ridge connection with tensile connection and moulded I-profile; middle: ridge connection (bolted); right: support on concrete footing with \n",
-    "welded steel plate)\n",
+    "welded steel plate).\n",
     "```\n",
     "\n",
     "This floor support connection is only suitable for low horizontal forces.\n",
@@ -359,7 +359,7 @@
     "```{figure} Images/arch.png\n",
     "---\n",
     "---\n",
-    "Arch (solid and truss beam)\n",
+    "Arch (solid and truss beam).\n",
     "```\n",
     "\n",
     "```{admonition} Rules of thumb\n",
@@ -379,13 +379,13 @@
     "```{figure} Images/arch_shapes.png\n",
     "---\n",
     "---\n",
-    "Possible shapes\n",
+    "Possible shapes.\n",
     "```\n",
     "\n",
     "```{figure} Images/arch_details.png\n",
     "---\n",
     "---\n",
-    "Details (left: ridge connection with steel connectors (dowel); middle: support of arch (welded steel hinge); right: arch support)\n",
+    "Details (left: ridge connection with steel connectors (dowel); middle: support of arch (welded steel hinge); right: arch support).\n",
     "```"
    ]
   },
