--- a/book/basics/concrete/material_characteristics_concrete_steel.ipynb
+++ b/book/basics/concrete/material_characteristics_concrete_steel.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "### Material properties (bars)\n",
     "\n",
-    "| Steel Grade         | Tensile Strength $( f_{t;k} )$ (N/mm²) | Yield Stress $( f_{y;k} )$ (N/mm²) | Strain at Maximum Load $\\varepsilon_{su}$ ‰ |\n",
+    "| Steel Grade         | Tensile Strength $( f_{t;k} )$ [N/mm²] | Yield Stress $( f_{y;k} )$ [N/mm²] | Strain at Maximum Load $\\varepsilon_{su}$ [‰] |\n",
     "|---------------------|-----------------------------------------|-------------------------------------|----------------------------------------------------|\n",
     "| FeB 400 HWL, HK     | 400                                     | 350                                 | 4.00                                               |\n",
     "| FeB 500 HWL, HK     | 500                                     | 435                                 | 3.25                                               |\n",
@@ -20,7 +20,7 @@
     "\n",
     "### Material properties (nets)\n",
     "\n",
-    "| Steel Grade         | Tensile Strength $( f_{t;k} )$ (N/mm²) | Design value tensile strength $( f_{y;k} )$ (N/mm²) | Strain at Maximum Load $\\varepsilon_{su}$ ‰ |\n",
+    "| Steel Grade         | Tensile Strength $( f_{t;k} )$ [N/mm²] | Design value tensile strength $( f_{y;k} )$ [N/mm²] | Strain at Maximum Load $\\varepsilon_{su}$ [‰] |\n",
     "|----------------------------|-------------------------|--------------------------------------|------------------------------------------------|\n",
     "| FeB 500 HKN, HWN           | 500                     | 435                                  | 2.175                                          |\n"
    ]
