--- a/book/basics/general_materials.ipynb
+++ b/book/basics/general_materials.ipynb
@@ -17,7 +17,7 @@
     "scale: 100%\n",
     "align: right\n",
     "---\n",
-    "Construction types and spans\n",
+    "Construction types and spans.\n",
     "```\n",
     "\n",
     "## Material properties\n",
