--- a/book/basics/steel/explanation_cross_sectional_quantities.ipynb
+++ b/book/basics/steel/explanation_cross_sectional_quantities.ipynb
@@ -11,6 +11,7 @@
     "---\n",
     "align: left\n",
     "---\n",
+    "Castellated beams.\n",
     "```\n",
     "\n",
     "### The carthesian coordinate system\n",
@@ -32,6 +33,7 @@
     "---\n",
     "align: left\n",
     "---\n",
+    "Radius of gyration.\n",
     "```\n",
     "\n",
     "The radius of gyration is needed to determine the slenderness of a structure. When the radius of gyration and the buckling curve are known, the buckling force can be determined.\n",
