--- a/book/calculation_examples/safety/effect_vs_resistance.ipynb
+++ b/book/calculation_examples/safety/effect_vs_resistance.ipynb
@@ -7,7 +7,11 @@
     "(content:calculation_examples:safety:effect_vs_resistance)=\n",
     "# Effect vs. Resistance\n",
     "\n",
-    "The results are visualized in two plots. The functions `plot_effect_vs_resistance` and `plot_Z`. First the necessary libraries are imported. The fuctions are shown below. In the plots, the numerical calculations and end results are shown. At the bottom of this page you can find a calculation example."
+    "The results are visualized in two plots. The functions `plot_effect_vs_resistance` and `plot_Z`. First the necessary libraries are imported. The fuctions are shown below. In the plots, the numerical calculations and end results are shown. At the bottom of this page you can find a calculation example.\n",
+    "\n",
+    "```{note}\n",
+    "The calculations serve as examples for educational purposes and not as guidance for practice.\n",
+    "```"
    ]
   },
   {
