--- a/book/design/concrete/bridge_beams.ipynb
+++ b/book/design/concrete/bridge_beams.ipynb
@@ -15,9 +15,11 @@
     "T-sections. This section gives an overview of some possibilities.\n",
     "\n",
     "```{figure} Images/Bridge_Beams1.jpg\n",
+    "Prefab concrete bridge beams.\n",
     "```  \n",
     "\n",
     "```{figure} Images/Bridge_Beams2.jpg\n",
+    "Prefab bridge beams, cross-section.\n",
     "```     \n",
     "\n",
     "```{note}\n",
@@ -30,6 +32,9 @@
     "## Applications\n",
     "\n",
     "```{figure} Images/Viaduct.jpg\n",
+    "---\n",
+    "---\n",
+    "Prefab beams with a compressive slab and a bridge deck, tram line construction.\n",
     "```      \n",
     "\n",
     "The curved viaduct of the tram line crossing the N201 is made from prefab beams with a compressive slab and a bridge deck. The viaduct\n",
@@ -63,11 +68,13 @@
     "```\n",
     "\n",
     "```{figure} Images/Bridge_Application3.jpg\n",
+    "---\n",
+    "---\n",
+    "Three different views on the tram line.\n",
     "```\n",
     "\n",
     "## Bridge beams I\n",
     "\n",
-
     "```{figure} Images/Railbeam_Structures.jpg\n",
     "\n",
     "Railbeam structures\n",
