--- a/book/design/concrete/bubbledeck_floors.ipynb
+++ b/book/design/concrete/bubbledeck_floors.ipynb
@@ -110,7 +110,9 @@
     "| BD   | 390                   | ∅315                  | 350                   | 650                                                           | 660                                                           | 10 - 11 |\n",
     "| BD   | 450                   | ∅360                  | 400                   | 740                                                           | 720                                                           | 12 - 14 |\n",
     "\n",
-    "The span is indicated for variable loads of $2.5  kN/m^2$ to $4,0  kN/m^2$"
+    "```{note}\n",
+    "The span is indicated for variable loads of $2.5  kN/m^2$ to $4,0  kN/m^2$\n",
+    "```"
    ]
   },
   {
