--- a/book/design/concrete/prefab_prestressed_beams.ipynb
+++ b/book/design/concrete/prefab_prestressed_beams.ipynb
@@ -12,8 +12,12 @@
    "metadata": {},
    "source": [
     "```{figure} Images/Prefab_Prestressed.jpg\n",
+    "---\n",
+    "---\n",
+    "Construction of prefab prestressed concrete beams.\n",
     "``` \n",
     "```{figure} Images/Prefab_Prestressed2.jpg\n",
+    "Different cross-sections of prefab prestressed concrete beams.\n",
     "``` \n",
     "\n",
     "```{note}\n",
@@ -53,8 +57,14 @@
     "### Spans\n",
     "\n",
     "```{figure} Images/Haitsma_Prestressed_Rectangular_Spans.jpg\n",
+    "---\n",
+    "---\n",
+    "Load resistance vs. span length (HRH 360).\n",
     "```  \n",
     "```{figure} Images/Haitsma_Prestressed_Rectangular_Spans2.jpg\n",
+    "---\n",
+    "---\n",
+    "Load resistance vs. span length (HRH 900)\n",
     "```     \n",
     "\n",
     "```{note}\n",
