--- a/book/design/concrete/reinforcement_tables.ipynb
+++ b/book/design/concrete/reinforcement_tables.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reinforcement tables"
+    "# Reinforcement tables\n",
+    "\n",
+    "Below, different reinforcement tables are presented. Each table represents a different type of structure. For an ellaborate calculation of the Moment - Normal force interaction diagram, please see [Moment normal force interaction](content:calculation_examples:safety:effect_vs_resistance)."
    ]
   },
   {
@@ -16,26 +18,22 @@
     "```\n",
     "\n",
     "```{note}\n",
-    "- Strength Class: Represents the range from C20/25 to C45/55.  \n",
-    "- Reinforcement Steel: Indicates the reinforcement steel type.  \n",
-    "- Quantity: The quantity specified, which in this case is 500.  \n",
-    "- Thickness: The thickness mentioned, which here is 0,10.  \n",
-    "- a/h: This seems to represent a certain characteristic of the reinforcement steel, presumably 'a' and 'h' values.  \n",
+    "- Strength class: From C20/25 to C45/55.\n",
+    "- Reinforcement steel: 500. indicates the reinforcement steel type.\n",
+    "- a/h: 0,10. Where a is the distance from center of reinforcement to edge of concrete.\n",
     "\n",
-    "a = distance from center of reinforcement to edge of concrete.\n",
+    "This table is taken from GTB 2010.\n",
     "```\n",
     "\n",
     "```{figure} Images/Reinforcement_Table2.jpg\n",
     "```    \n",
     "\n",
     "```{note}\n",
-    "- Strength Class: Represents C55/67.  \n",
-    "- Reinforcement Steel: Indicates the reinforcement steel type.  \n",
-    "- Quantity: The quantity specified, which in this case is 500.  \n",
-    "- Thickness: The thickness mentioned, which here is 0,10.  \n",
-    "- a/h: This seems to represent a certain characteristic of the reinforcement steel, presumably 'a' and 'h' values.  \n",
+    "- Strength Class: C55/67.  \n",
+    "- Reinforcement steel: 500. indicates the reinforcement steel type.\n",
+    "- a/h: 0,10. Where a is the distance from center of reinforcement to edge of concrete.\n",
     "\n",
-    "a = distance from center of reinforcement to edge of concrete.\n",
+    "This table is taken from GTB 2010.\n",
     "```\n",
     "\n",
     "```{figure} Images/Reinforcement_Table3.jpg\n",
@@ -43,12 +41,10 @@
     "\n",
     "```{note}\n",
     "- Strength Class: Represents C20/25 till C45/55.  \n",
-    "- Reinforcement Steel: Indicates the reinforcement steel type.  \n",
-    "- Quantity: The quantity specified, which in this case is 500.  \n",
-    "- Thickness: The thickness mentioned, which here is 0,15.  \n",
-    "- a/h: This seems to represent a certain characteristic of the reinforcement steel, presumably 'a' and 'h' values.  \n",
+    "- Reinforcement steel: 500. indicates the reinforcement steel type.\n",
+    "- a/h: 0,10. Where a is the distance from center of reinforcement to edge of concrete.\n",
     "\n",
-    "a = distance from center of reinforcement to edge of concrete.\n",
+    "This table is taken from GTB 2010.\n",
     "```\n",
     "\n",
     "```{figure} Images/Reinforcement_Table4.jpg\n",
@@ -56,12 +52,10 @@
     "\n",
     "```{note}\n",
     "- Strength Class: Represents C20/25 till C45/55.  \n",
-    "- Reinforcement Steel: Indicates the reinforcement steel type.  \n",
-    "- Quantity: The quantity specified, which in this case is 500.  \n",
-    "- Thickness: The thickness mentioned, which here is 0,10.  \n",
-    "- a/h: This seems to represent a certain characteristic of the reinforcement steel, presumably 'a' and 'h' values.  \n",
+    "- Reinforcement steel: 500. indicates the reinforcement steel type.\n",
+    "- a/h: 0,10. Where a is the distance from center of reinforcement to edge of concrete.\n",
     "\n",
-    "a = distance from center of reinforcement to edge of concrete.\n",
+    "This table is taken from GTB 2010.\n",
     "```\n",
     "\n",
     "```{figure} Images/Reinforcement_BendingMoment.jpg\n",
