--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -196,7 +196,7 @@
     "\n",
     "According to Eurocode 1990, the permanent load may be reduced by a reduction factor $ξ$. This is set at 0.89 in the National Annex to the Eurocode. For most buildings (including offices), $\\gamma_{G}$ is 1.35 and $\\gamma_{Q}$ is 1.5. The partial factor for the permanent load is multiplied by the reduction factor: $0.89 × 1.35 = 1.2$ (the value of the former load factor for the permanent load). We will use this value as the partial factor for the permanent load. Therefore, for the office building: $q_{ULS} = 1.2 \\cdot q_G + 1.5 \\cdot q_Q$. With these quantities, we can calculate the moment and thus the bending stress, and then check the strength by performing the unity check (U.C.):\n",
     "\n",
-    "$U.C. = /frac{\\sigma_{m,d}}{f_{m,d}} <= 1.0$\n",
+    "$U.C. = \\frac{\\sigma_{m,d}}{f_{m,d}} <= 1.0$\n",
     "\n",
     "If the $U.C. > 1.0$, then a stronger profile is needed. For the $W_{required}$ of the new profile, the following applies:\n",
     "\n",
@@ -209,14 +209,14 @@
     "\n",
     "The maximum moment occurring in the beam:\n",
     "\n",
-    "$M_d = /frac{1}{8} q_{ULS} \\cdot l^2 = /frac{1}{8} \\cdot 84.2 [kN/m] \\cdot (6 m)^2 = 379.0 kNm = 379 \\cdot 10^6 Nmm$\n",
+    "$M_d = \\frac{1}{8} q_{ULS} \\cdot l^2 = \\frac{1}{8} \\cdot 84.2 [kN/m] \\cdot (6 m)^2 = 379.0 kNm = 379 \\cdot 10^6 Nmm$\n",
     "\n",
     "The maximum stress in the beam:\n",
     "$\\sigma_{m,d} = \\frac{M_d}{W} = \\frac{379 \\cdot 10^6 [Nmm]}{1479 \\cdot 10^3 [mm^3]} = 256.2 [N/mm^2]$ \n",
     "\n",
     "The stress must not exceed the material strength of $f_{m;d} = 235 [N/mm^2]$. We check this with the U.C.:\n",
     "\n",
-    "$U.C. = \\frac{\\sigma_{m,d}}{f_{m;d}} = \\dfrac{256.2 [N/mm^2]}{235 [N/mm^2]} = 1.1 > 1 \\Rightarrow$ Does not comply.\n",
+    "$U.C. = \\frac{\\sigma_{m,d}}{f_{m;d}} = \\dfrac{256.2 [N/mm^2]}{235 [N/mm^2]} = 1.1 > 1 \\Rightarrow$ $\\textcolor{red}{\\text{Does not comply}}$\n",
     "\n",
     "The profile is too slender. We need a profile with a larger section modulus $W$:\n",
     "\n",
@@ -238,13 +238,13 @@
     "\n",
     "$sigma_{m,d} = \\dfrac{M_d}{W} = \\dfrac{398 \\cdot 10^6 [Nmm]}{18 \\cdot 10^6 [mm^4]} = 22.06 [N/mm^2]$\n",
     "\n",
-    "$f_{m;d} = 20 [N/mm^2]$ \\Rightarrow $U.C. = \\dfrac{\\sigma_{m,d}}{f_{m;d}} = \\dfrac{22.1 [N/mm^2]}{20 [N/mm^2]}$ = 1.1 > 1$ $\\Rightarrow$ \\textcolor{red}{Does not comply.}\n",
+    "$f_{m;d} = 20 [N/mm^2] \\Rightarrow U.C. = \\dfrac{\\sigma_{m,d}}{f_{m;d}} = \\dfrac{22.1 [N/mm^2]}{20 [N/mm^2]}$ = 1.1 > 1$\\Rightarrow$ $\\textcolor{red}{\\text{Does not comply}}$\n",
     "\n",
     "This shows that the beam is too slender. We need a beam with a larger section modulus \\(W\\).\n",
     "\n",
     "$W_{required} = 1.1 \\cdot 18.0 \\cdot 10^6 [mm^3] = 19.80 \\cdot 10^6 [mm^3]$\n",
     "\n",
-    "This corresponds to a minimum cross-section of $630 \\cdot 300 mm^2[$ \n",
+    "This corresponds to a minimum cross-section of $630 \\cdot 300 mm^2$ \n",
     "\n",
     "$g = 4.73 [kN/m]$, $W = 19.85 \\cdot 10^6 [mm^3]$, and $I = 6251.2 \\cdot 10^6 [mm^4]$.\n",
     "\n",
