--- a/book/calculation_examples/concrete/cantilever_beam.ipynb
+++ b/book/calculation_examples/concrete/cantilever_beam.ipynb
@@ -123,9 +123,6 @@
     "---\n",
     "width: 400px\n",
     "---\n",
-    "+++\n",
-    "{bdg-primary}`Steel`\n",
-    "```\n",
     "\n",
     "The resting load consists of the weight of the channel plates, the finishing layer, and the ceiling with pipes. The required channel plate has a thickness of 200 mm and a weight of $3.1 [kN/m^2]$. The 50 mm thick topping layer weighs $1.2 [kN/m^2]$, and for the ceiling and pipes, $0.6 [kN/m^2]$ is considered. Together, this gives a resting load of:\n",
     "\n",
@@ -142,6 +139,10 @@
     "The total permanent load becomes:\n",
     "\n",
     "$0.98 [kN/m] + 39.2 [kN/m] = 40.2 [kN/m]$\n",
+    "\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
+    "```\n",
     "\n",
     "With this data, we will check the beam for strength and stiffness. First, we consider the beam section between the supports and then the cantilever. In both calculations, the permanent load is present everywhere. However, different partial factors apply, depending on whether the load is favorable or unfavorable.\n",
     "\n",
@@ -225,7 +226,10 @@
     "\n",
     "The support moment at B is solely determined by the load on the cantilever, not the load on beam section A-B. The maximum moment occurs when the cantilever is extremely loaded, by both the permanent and variable loads. Here too, we can determine the partial factors, where those for beam section A-B are not applicable.\n",
     "\n",
-    "```{figure} Images/Cantilever_Beam_Momentline2.jpg\n",
+    "```{figure} Images/Cantilever_Beam_Loads_Momentline2.jpg\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
     "```\n",
     "\n",
     "Partial factors for Ultimate Limit State of Cantilevered Beam (Safety Class 2)\n",
